@@ -1157,6 +1157,9 @@
 	'S_AGE'=>				'Age',
 	'S_ISSUE'=>				'Issue',
 	'S_SYSTEM_STATUS'=>			'System status',
+	'S_HOST_STATUS_STATUS'=>			'Host status',
+	'S_WITHOUT_PROBLEMS' =>				'Without problems',
+	'S_WITH_PROBLEMS' =>				'With problems',
 	'S_LAST_20_ISSUES'=>			'Last 20 issues',
 	'S_FAVOURITE'=>				'Favourite',
 	'S_FAVOURITES'=>			'Favourites',
